Continuando a construção da Landing Page

--- a/Curso-Udemy/Simple Landing Page/assets/css/classes.css
+++ b/Curso-Udemy/Simple Landing Page/assets/css/classes.css
@@ -6,14 +6,14 @@
 }
 
 .white-bg {
-
+    color: var(--primary-color);
     background: var(--white-color);
 }
 
 .main-content {
     max-width: 120rem;
     margin: 0 auto;
-    padding: var(--gap);
+    padding: 8rem var(--gap);
 }
 
 .section {
