--- a/Curso-Udemy/Simple Landing Page/assets/css/elements.css
+++ b/Curso-Udemy/Simple Landing Page/assets/css/elements.css
@@ -5,6 +5,7 @@
 
 html {
     font-size: 62.5%;
+    scroll-behavior: smooth;
 }
 
 body {
@@ -26,10 +27,14 @@ h6 {
 
 h1 {
     font-size: 6rem;
+    text-transform: uppercase;
 }
 
-h2 {
-    font-size: 5.5rem;
+h2{
+    font-size: 8rem;
+    margin-bottom: 5rem;
+    text-transform: uppercase ;
+    line-height: 1.2;
 }
 
 h3 {
@@ -50,4 +55,8 @@ h6 {
 
 a {
     text-decoration: none;
+}
+
+p{
+    margin-bottom: 2rem;
 }
